[gd_scene load_steps=5 format=3 uid="uid://cxg70kejfkqjc"]

[ext_resource type="Script" path="res://Objects/UI/DamagePopup/DamagePopup.gd" id="1"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelBase:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelBase/DamageLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="2"]
resource_name = "appear"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disappear"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelBase:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelBase/DamageLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kth8"]
_data = {
"RESET": SubResource("1"),
"appear": SubResource("2")
}

[node name="DamagePopup" type="Node2D"]
script = ExtResource("1")

[node name="LabelBase" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)

[node name="DamageLabel" type="Label" parent="LabelBase"]
offset_left = -80.0
offset_top = -48.0
offset_right = -30.0
offset_bottom = -14.0
scale = Vector2(3, 3)
text = "-5"

[node name="DamageLabelPlayer" type="AnimationPlayer" parent="LabelBase/DamageLabel"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_7kth8")
}
